completed truncated results

--- a/results/infogain/config.ini
+++ b/results/infogain/config.ini
@@ -25,10 +25,6 @@ classname = weka.classifiers.bayes.BayesNet
 classname = weka.classifiers.lazy.IBk
 options = -K 1 -A weka.core.neighboursearch.KDTree
 
-[knn-3]
-classname = weka.classifiers.lazy.IBk
-options = -K 3 -A weka.core.neighboursearch.KDTree
-
 [knn-5]
 classname = weka.classifiers.lazy.IBk
 options = -K 5 -A weka.core.neighboursearch.KDTree
@@ -38,11 +34,8 @@ options = -K 5 -A weka.core.neighboursearch.KDTree
 classname = weka.classifiers.trees.J48
 options = -C 0.25
 
-[hoeffding-default]
-classname = weka.classifiers.trees.HoeffdingTree
-
-[reptree-default]
-classname = weka.classifiers.trees.REPTree
+[smo]
+classname = weka.classifiers.functions.SMO
 
 ; Multilayer Perceptrons
 [mlp-1-010]
