truncated results from ARTEMIS

--- a/feature_selection/config.ini
+++ b/feature_selection/config.ini
@@ -8,23 +8,24 @@
 # weka classname
 # 'searcher_options' and 'evaluator_options' are optional
 
-[meta]
-data_path = /home/bellaando/thesis23/clean_data/no_FS_local.csv 
+; [meta]
+; data_path = /home/bellaando/thesis23/clean_data/no_FS_local.csv 
 
-[cfs_local]
-searcher = weka.attributeSelection.BestFirst
-evaluator = weka.attributeSelection.CfsSubsetEval
+; [cfs_local]
+; searcher = weka.attributeSelection.BestFirst
+; evaluator = weka.attributeSelection.CfsSubsetEval
 
-[infogain_local]
-searcher = weka.attributeSelection.Ranker
-searcher_options = -N 5
-evaluator = weka.attributeSelection.InfoGainAttributeEval
+; [infogain_local]
+; searcher = weka.attributeSelection.Ranker
+; searcher_options = -N 5
+; evaluator = weka.attributeSelection.InfoGainAttributeEval
 
 ; #############################################################################
 ; ###################        FOR ARTEMIS TRUNCATED           ##################
 ; #############################################################################
 
-; data_path = /project/clean_data/no_FS_truncated.csv 
+; [meta]
+; data_path = /project/START2/clean_data/no_FS_truncated.csv 
 
 ; [cfs_truncated]
 ; searcher = weka.attributeSelection.BestFirst
@@ -39,13 +40,14 @@ evaluator = weka.attributeSelection.InfoGainAttributeEval
 ; ###################           FOR ARTEMIS FULL             ##################
 ; #############################################################################
 
-; data_path = /project/clean_data/no_FS_full.csv 
+[meta]
+data_path = /project/START2/clean_data/no_FS_full.csv 
 
-; [cfs_full]
-; searcher = weka.attributeSelection.BestFirst
-; evaluator = weka.attributeSelection.CfsSubsetEval
+[cfs_full]
+searcher = weka.attributeSelection.BestFirst
+evaluator = weka.attributeSelection.CfsSubsetEval
 
-; [infogain_full]
-; searcher = weka.attributeSelection.Ranker
-; searcher_options = -N 5
-; evaluator = weka.attributeSelection.InfoGainAttributeEval
+[infogain_full]
+searcher = weka.attributeSelection.Ranker
+searcher_options = -N 5
+evaluator = weka.attributeSelection.InfoGainAttributeEval
