--- a/results/manual/config.ini
+++ b/results/manual/config.ini
@@ -2,60 +2,60 @@
 ###################           FOR LOCAL MACHINE            ##################
 #############################################################################
 
-[meta]
-data_path = /home/bellaando/thesis23/clean_data/manual_FS_local.csv
+; [meta]
+; data_path = /home/bellaando/thesis23/clean_data/manual_FS_local.csv
 
-; Logistic Regression
-[logistic_local]
-classname = weka.classifiers.functions.Logistic
+; ; Logistic Regression
+; [logistic_local]
+; classname = weka.classifiers.functions.Logistic
 
-; Rule-based Classifiers
-[one_r_local]
-classname = weka.classifiers.rules.OneR
+; ; Rule-based Classifiers
+; [one_r_local]
+; classname = weka.classifiers.rules.OneR
 
-[zero_r_local]
-classname = weka.classifiers.rules.ZeroR
+; [zero_r_local]
+; classname = weka.classifiers.rules.ZeroR
 
-; Naive Bayes
-[naivebayes_local]
-classname = weka.classifiers.bayes.NaiveBayes
+; ; Naive Bayes
+; [naivebayes_local]
+; classname = weka.classifiers.bayes.NaiveBayes
 
-; Bayesian Network
-[bayesnet_local]
-classname = weka.classifiers.bayes.BayesNet
+; ; Bayesian Network
+; [bayesnet_local]
+; classname = weka.classifiers.bayes.BayesNet
 
-; Nearest Neighbour
-[knn-1_local]
-classname = weka.classifiers.lazy.IBk
-options = -K 1 -A weka.core.neighboursearch.KDTree
+; ; Nearest Neighbour
+; [knn-1_local]
+; classname = weka.classifiers.lazy.IBk
+; options = -K 1 -A weka.core.neighboursearch.KDTree
 
-[knn-5_local]
-classname = weka.classifiers.lazy.IBk
-options = -K 5 -A weka.core.neighboursearch.KDTree
+; [knn-5_local]
+; classname = weka.classifiers.lazy.IBk
+; options = -K 5 -A weka.core.neighboursearch.KDTree
 
-; Decision Trees
-[j48-0.25_local]
-classname = weka.classifiers.trees.J48
-options = -C 0.25
+; ; Decision Trees
+; [j48-0.25_local]
+; classname = weka.classifiers.trees.J48
+; options = -C 0.25
 
-; Support Vector Machine
-[smo_local]
-classname = weka.classifiers.functions.SMO
+; ; Support Vector Machine
+; [smo_local]
+; classname = weka.classifiers.functions.SMO
 
-; Multilayer Perceptrons
-[mlp-1-010_local]
-classname = weka.classifiers.functions.MultilayerPerceptron
-options = -H 1 -N 10
+; ; Multilayer Perceptrons
+; [mlp-1-010_local]
+; classname = weka.classifiers.functions.MultilayerPerceptron
+; options = -H 1 -N 10
 
-[mlp-1-050_local]
-classname = weka.classifiers.functions.MultilayerPerceptron
-options = -H 1 -N 50
+; [mlp-1-050_local]
+; classname = weka.classifiers.functions.MultilayerPerceptron
+; options = -H 1 -N 50
 
 ; #############################################################################
 ; ###################        FOR ARTEMIS TRUNCATED           ##################
 ; #############################################################################
 
-; [meta_truncated]
+; [meta]
 ; data_path = /project/RDS-FEI-START2-RW/clean_data/manual_FS_truncated.csv
 
 ; ; Logistic Regression
@@ -108,51 +108,51 @@ options = -H 1 -N 50
 ; ###################           FOR ARTEMIS FULL             ##################
 ; #############################################################################
 
-; [meta_full]
-; data_path = /project/RDS-FEI-START2-RW/clean_data/manual_FS_full.csv
+[meta]
+data_path = /project/RDS-FEI-START2-RW/clean_data/manual_FS_full.csv
 
-; ; Logistic Regression
-; [logistic_full]
-; classname = weka.classifiers.functions.Logistic
+; Logistic Regression
+[logistic_full]
+classname = weka.classifiers.functions.Logistic
 
-; ; Rule-based Classifiers
-; [one_r_full]
-; classname = weka.classifiers.rules.OneR
+; Rule-based Classifiers
+[one_r_full]
+classname = weka.classifiers.rules.OneR
 
-; [zero_r_full]
-; classname = weka.classifiers.rules.ZeroR
+[zero_r_full]
+classname = weka.classifiers.rules.ZeroR
 
-; ; Naive Bayes
-; [naivebayes_full]
-; classname = weka.classifiers.bayes.NaiveBayes
+; Naive Bayes
+[naivebayes_full]
+classname = weka.classifiers.bayes.NaiveBayes
 
-; ; Bayesian Network
-; [bayesnet_full]
-; classname = weka.classifiers.bayes.BayesNet
+; Bayesian Network
+[bayesnet_full]
+classname = weka.classifiers.bayes.BayesNet
 
-; ; Nearest Neighbour
-; [knn-1_full]
-; classname = weka.classifiers.lazy.IBk
-; options = -K 1 -A weka.core.neighboursearch.KDTree
+; Nearest Neighbour
+[knn-1_full]
+classname = weka.classifiers.lazy.IBk
+options = -K 1 -A weka.core.neighboursearch.KDTree
 
-; [knn-5_full]
-; classname = weka.classifiers.lazy.IBk
-; options = -K 5 -A weka.core.neighboursearch.KDTree
+[knn-5_full]
+classname = weka.classifiers.lazy.IBk
+options = -K 5 -A weka.core.neighboursearch.KDTree
 
-; ; Decision Trees
-; [j48-0.25_full]
-; classname = weka.classifiers.trees.J48
-; options = -C 0.25
+; Decision Trees
+[j48-0.25_full]
+classname = weka.classifiers.trees.J48
+options = -C 0.25
 
-; ; Support Vector Machines
-; [smo_full]
-; classname = weka.classifiers.functions.SMO
+; Support Vector Machines
+[smo_full]
+classname = weka.classifiers.functions.SMO
 
-; ; Multilayer Perceptrons
-; [mlp-1-010_full]
-; classname = weka.classifiers.functions.MultilayerPerceptron
-; options = -H 1 -N 10
+; Multilayer Perceptrons
+[mlp-1-010_full]
+classname = weka.classifiers.functions.MultilayerPerceptron
+options = -H 1 -N 10
 
-; [mlp-1-050_full]
-; classname = weka.classifiers.functions.MultilayerPerceptron
-; options = -H 1 -N 50
+[mlp-1-050_full]
+classname = weka.classifiers.functions.MultilayerPerceptron
+options = -H 1 -N 50
