redid results configs for new dataset

--- a/results/artemis_new/cfs_knn1_j48/config.ini
+++ b/results/artemis_new/cfs_knn1_j48/config.ini
@@ -1,12 +1,12 @@
 [meta]
-data_path = /project/RDS-FEI-START2-RW/feature_selection/cfs_full.csv
+data_path = /project/RDS-FEI-START2-RW/feature_selection/cfs_full_new.csv
 
 ; Nearest Neighbour
-[knn-1_full]
+[new_knn-1_full]
 classname = weka.classifiers.lazy.IBk
 options = -K 1 -A weka.core.neighboursearch.KDTree
 
 ; Decision Trees
-[j48-0.25_full]
+[new_j48-0.25_full]
 classname = weka.classifiers.trees.J48
 options = -C 0.25
