--- a/results/artemis_new/infogain_knn5/config.ini
+++ b/results/artemis_new/infogain_knn5/config.ini
@@ -1,7 +1,7 @@
 
 [meta]
-data_path = /project/RDS-FEI-START2-RW/feature_selection/infogain_full.csv
+data_path = /project/RDS-FEI-START2-RW/feature_selection/infogain_full_new.csv
 
-[knn-5_full]
+[new_knn-5_full]
 classname = weka.classifiers.lazy.IBk
 options = -K 5 -A weka.core.neighboursearch.KDTree
