--- a/results/artemis_new/nofs_mlp/config.ini
+++ b/results/artemis_new/nofs_mlp/config.ini
@@ -1,15 +1,15 @@
 [meta]
-data_path = /project/RDS-FEI-START2-RW/clean_data/no_FS_full.csv
+data_path = /project/RDS-FEI-START2-RW/clean_data/no_FS_full_new.csv
 
 ; Support Vector Machines
-[smo_full]
+[new_smo_full]
 classname = weka.classifiers.functions.SMO
 
 ; Multilayer Perceptrons
-[mlp-1-010_full]
+[new_mlp-1-010_full]
 classname = weka.classifiers.functions.MultilayerPerceptron
 options = -H 1 -N 10
 
-[mlp-1-050_full]
+[new_mlp-1-050_full]
 classname = weka.classifiers.functions.MultilayerPerceptron
 options = -H 1 -N 50
