--- a/results/artemis_new/infogain_knn1_j48/config.ini
+++ b/results/artemis_new/infogain_knn1_j48/config.ini
@@ -3,9 +3,9 @@
 data_path = /project/RDS-FEI-START2-RW/feature_selection/infogain_full_new.csv
 
 ; Nearest Neighbour
-[new_knn-1_full]
-classname = weka.classifiers.lazy.IBk
-options = -K 1 -A weka.core.neighboursearch.KDTree
+;[new_knn-1_full]
+;classname = weka.classifiers.lazy.IBk
+;options = -K 1 -A weka.core.neighboursearch.KDTree
 
 ; Decision Trees
 [new_j48-0.25_full]
