--- a/results/artemis_new/manual_mlp/config.ini
+++ b/results/artemis_new/manual_mlp/config.ini
@@ -2,8 +2,8 @@
 data_path = /project/RDS-FEI-START2-RW/clean_data/manual_FS_full_new.csv
 
 ; Support Vector Machines
-[new_smo_full]
-classname = weka.classifiers.functions.SMO
+;[new_smo_full]
+;classname = weka.classifiers.functions.SMO
 
 ; Multilayer Perceptrons
 [new_mlp-1-010_full]
