--- a/results/artemis_new/nofs_basics/config.ini
+++ b/results/artemis_new/nofs_basics/config.ini
@@ -2,19 +2,19 @@
 data_path = /project/RDS-FEI-START2-RW/clean_data/no_FS_full_new.csv
 
 ; Logistic Regression
-[new_logistic_full]
-classname = weka.classifiers.functions.Logistic
+;[new_logistic_full]
+;classname = weka.classifiers.functions.Logistic
 
 ; Rule-based Classifiers
-[new_one_r_full]
-classname = weka.classifiers.rules.OneR
+;[new_one_r_full]
+;classname = weka.classifiers.rules.OneR
 
-[new_zero_r_full]
-classname = weka.classifiers.rules.ZeroR
+;[new_zero_r_full]
+;classname = weka.classifiers.rules.ZeroR
 
 ; Naive Bayes
-[new_naivebayes_full]
-classname = weka.classifiers.bayes.NaiveBayes
+;[new_naivebayes_full]
+;classname = weka.classifiers.bayes.NaiveBayes
 
 ; Bayesian Network
 [new_bayesnet_full]
